@@ -1,36 +1,34 @@
 package oochess.app;
 
-import java.util.HashMap;
-import java.util.Map;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Optional;
 
 import oochess.app.discordintegration.MyConfiguration;
-import oochess.app.discordintegration.notificadorNaoSuportado;
 import oochess.app.elostrategies.ByOne;
 import oochess.app.elostrategies.EloStrategy;
 import oochess.app.facade.Sessao;
 import oochess.app.facade.handlers.RegistarUtilizadorHandler;
-import oochess.app.jogador.Jogador;
 
 /**
  * Esta é a classe do sistema.
  */
 public class OOChess {
 
-	private static EloStrategy STRATEGY; 
+    private static EloStrategy strategy;
     private CatalogoJogadores catalogoJogadores;
     //outos catalogos?
 
     public OOChess() {
         this.catalogoJogadores = CatalogoJogadores.getInstance();
+        setSTRATEGY();
         //outos catalogos?
-        
+
     }
-    
-    public static EloStrategy getSTRATEGY() {
-    	return STRATEGY;
+
+    public static EloStrategy getStrategy() {
+        return strategy;
     }
-    
+
     public RegistarUtilizadorHandler getRegistarUtilizadorHandler() {
         return new RegistarUtilizadorHandler(catalogoJogadores);
     }
@@ -49,19 +47,22 @@ public class OOChess {
             return Optional.empty();
         }
         String userPassword = this.catalogoJogadores.getJogador(username).getPassword();
-        return password.equals(userPassword) ? Optional.of(new Sessao()) : Optional.empty();
+        return password.equals(userPassword) ? Optional.of(
+                new Sessao(catalogoJogadores.getJogador(username))) : Optional.empty();
     }
-    
-    private void setSTRATEGY() {
-    	String estrategia = MyConfiguration.getINSTANCE().getString("ELO_STRATEGY");
-    	try {
-    		Class<EloStrategy> estrategiaClass = (Class<EloStrategy>) Class.forName(estrategia);
-    		STRATEGY = estrategiaClass.newInstance();
-    	} catch (ClassNotFoundException | IllegalAccessException | InstantiationException e1) {
-    		//Default
-    		STRATEGY = new ByOne(); 
-        } 
-			
+
+    @SuppressWarnings("unchecked")
+    private static void setSTRATEGY() {
+        String estrategia = MyConfiguration.getINSTANCE().getString("STRATEGY_CLASS");
+        try {
+            Class<EloStrategy> estrategiaClass = (Class<EloStrategy>) Class.forName(estrategia);
+            strategy = estrategiaClass.getDeclaredConstructor().newInstance();
+        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException |
+                InvocationTargetException e1) {
+            //Default
+            strategy = new ByOne();
+        }
+
     }
-    
+
 }
